# ambient

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  example_basic.py  example_chirp_vitals.py  example_visualize.py  pyproject.toml
.github/workflows/: ci.yml
configs/: basic.cfg  sdk35.cfg  vital_signs.cfg  vital_signs_chirp.cfg  working.cfg
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  constants.ts  index.css  themes.ts
dashboard/src/api/: client.ts  websocket.ts
dashboard/src/components/: Layout.tsx  (+5 more)
docs/: API_REFERENCE.md  CODEBASE_AUDIT.md  CONFIG_PARSER.md  FALL_DETECTION.md  INTEGRATION_GUIDE.md  POINT_CLOUD.md  TI_VISUALIZER_INTEGRATION.md  TLV_SPECIFICATION.md  TROUBLESHOOTING.md  architecture.md  custom_firmware_feasibility.md  firmware_setup.md  iq_data_research.md  mode5_debugging_reference.md
examples/: chirp_vitals.py  dashboard_demo.py  minimal_vital_signs.py  presence_detector.py  recording_session.py
load_profiles/: standard.json  stress.json  sustained.json
scripts/: debug_tlv_types.py  dev.sh  replay_recording.py  run.sh  setup-udev.sh  setup.sh  simulate_frames.py  test_chirp_phase.py  test_chirp_vitals.py  validate_recording.py
scripts/debug/: diagnose.py  find_data_port.py  query_device.py  raw_read.py  test_cli_data.py  test_ports.py  test_uart_mode.py
src/ambient/: __init__.py  cli.py  config.py
tests/: conftest.py  test_api.py  test_chirp.py  test_config.py  test_config_parser.py  test_fall_detection.py  test_point_cloud.py  test_processing.py  test_sensor.py  test_storage.py  test_vitals.py
(+70 files in other folders)
